animation overflow bug fix

--- a/styles/showcase.module.scss
+++ b/styles/showcase.module.scss
@@ -3,7 +3,7 @@
 #showcase {
   height: 100vh;
   padding-top: 10rem;
-  position: relative;
+  overflow-x: hidden;
 }
 
 .showcase__title {
